--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,1 +1,20 @@
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: python-app
+  labels:
+    app: python-app
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: python-app
+  template:
+    metadata:
+      labels:
+        app: python-app
+    spec:
+      containers:
+        - name: python-app
+          image: 138645654058.dkr.ecr.ap-south-1.amazonaws.com/gitaction:10
+            - containerPort: 8000
