--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -31,6 +31,6 @@ jobs:
 
       - name: Run Renovate
         uses: renovatebot/github-action@v40.3.6
-        env:
-          RENOVATE_GHCR_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
+        with:
+          token: ${{ secrets.RENOVATE_TOKEN }}
           # RENOVATE_AWS_ECR_PASSWORD is set via the GITHUB_ENV variable
