--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -33,4 +33,5 @@ jobs:
         uses: renovatebot/github-action@v40.3.6
         with:
           token: ${{ secrets.RENOVATE_TOKEN }}
+          configurationFile: .github/renovate.json
           # RENOVATE_AWS_ECR_PASSWORD is set via the GITHUB_ENV variable
