--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,13 +16,11 @@
   ],
   "packageRules": [
     {
-      "matchDatasources": [ "docker"],
+     "matchDatasources": ["docker"],
      "matchPackageNames": ["138645654058.dkr.ecr.ap-south-1.amazonaws.com/gitaction"],
       "registryUrls": ["138645654058.dkr.ecr.ap-south-1.amazonaws.com"],
-        
     },
     {
-     
       "matchManagers": ["github-actions"],
       "matchUpdateTypes": ["minor", "patch"],
       "automerge": false
@@ -31,7 +29,7 @@
   
   "kubernetes": {
     "fileMatch": [
-      "manifests/.+\\.yaml$",
+     "(^|/)manifeste\\.ya?ml$"
     ]
   },
   "prConcurrentLimit": 10
