--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -4,7 +4,11 @@ on:
  # schedule:
   #  - cron: '0 * * * *' # Run hourly
   workflow_dispatch:
-  
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+
 env:
   AWS_REGION: ap-south-1
   ECR_REPOSITORY: gitaction
