--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,7 @@
   "prConcurrentLimit": 10,
   "hostRules": [
     {
+      "hostType": "docker",
       "matchHost": "138645654058.dkr.ecr.ap-south-1.amazonaws.com",
       "username": "AWS",
       "password": "{{ env.RENOVATE_AWS_ECR_PASSWORD }}"
