--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,5 +16,5 @@ spec:
     spec:
       containers:
         - name: python-app
-          image: 138645654058.dkr.ecr.ap-south-1.amazonaws.com/gitaction:9
+          image: 138645654058.dkr.ecr.ap-south-1.amazonaws.com/gitaction:v1.0.0-a365740
             - containerPort: 8000
